added tests for create admin and owner, added checking duplicate login and phone